fix flex container wrap

--- a/src/app/styles/App.scss
+++ b/src/app/styles/App.scss
@@ -11,6 +11,7 @@
   width:100%;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   gap: 30px;
 }
 
